kube/deploy/core/ingress/envoy-gateway/gateways/common.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https-redirect
  namespace: ingress
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-internal
      namespace: ingress
      sectionName: http
    - name: envoy-external
      namespace: ingress
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301 # TODO: https://github.com/envoyproxy/gateway/issues/7380
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: harden
  namespace: ingress
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-internal
      namespace: ingress
      sectionName: internal
    - name: envoy-external
      namespace: ingress
      sectionName: external
    - name: envoy-external
      namespace: ingress
      sectionName: public
  rules:
    - filters:
        - type: ResponseHeaderModifier
          responseHeaderModifier:
            remove: ["Server", "X-Powered-By", "X-AspNet-Version", "X-AspNetMvc-Version"]
            set:
              - name: Strict-Transport-Security
                value: max-age=31449600; includeSubDomains; preload
    - matches:
        - headers:
            - name: User-Agent
              type: RegularExpression
              value: ".*AddSearchBot.*|.*AI2Bot.*|.*AI2Bot-DeepResearchEval.*|.*Ai2Bot-Dolma.*|.*aiHitBot.*|.*amazon-kendra.*|.*Amazonbot.*|.*AmazonBuyForMe.*|.*Andibot.*|.*Anomura.*|.*anthropic-ai.*|.*Applebot.*|.*Applebot-Extended.*|.*atlassian-bot.*|.*Awario.*|.*bedrockbot.*|.*bigsur.ai.*|.*Bravebot.*|.*Brightbot 1.0.*|.*BuddyBot.*|.*Bytespider.*|.*CCBot.*|.*Channel3Bot.*|.*ChatGLM-Spider.*|.*ChatGPT Agent.*|.*ChatGPT-User.*|.*Claude-SearchBot.*|.*Claude-User.*|.*Claude-Web.*|.*ClaudeBot.*|.* [...]
                    # how to get the above from Neovim:
                    # curl -vL 'https://raw.githubusercontent.com/ai-robots-txt/ai.robots.txt/refs/heads/main/robots.txt' | nvim
                    # first half:
                    # :%s/\nUser-agent:/,/g
                    # second half:
                    # :%s/, /*, \~*/g
      filters:
        - type: RequestRedirect
          requestRedirect:
            statusCode: 301
            hostname: www.google.com
            port: 443
            path:
              type: ReplaceFullPath
              replaceFullPath: "/"
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: custom-error-page
  namespace: ingress
  annotations:
    external-dns.alpha.kubernetes.io/controller: none
spec:
  parentRefs:
    - name: envoy-internal
      namespace: ingress
    - name: envoy-external
      namespace: ingress
  rules:
    - filters:
        - type: ExtensionRef
          extensionRef:
            group: gateway.envoyproxy.io
            kind: HTTPRouteFilter
            name: custom-error-page
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/securitypolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: ip-all-private-allow
  namespace: ingress
spec:
  targetSelectors:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      matchLabels:
        ip.envoy.internal/all-private: allow
  authorization:
    defaultAction: Deny
    rules:
      - action: Allow
        principal:
          clientCIDRs: ["10.0.0.0/8", "172.16.0.0/12", "192.168.0.0/16", "100.64.0.0/10"]
