kube/deploy/core/ingress/envoy-gateway/gateways/external.yaml
---
# yaml-language-server: $schema=https://kube-schemas.pages.dev/gateway.networking.k8s.io/gateway_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: &name envoy-external
  annotations:
    external-dns.alpha.kubernetes.io/target: "${DNS_MAIN_CF}"
    gatus.home-operations.com/endpoint: |
      group: ${CLUSTER_NAME}-external
      guarded: true
      ui:
        hide-hostname: true
        hide-url: true
spec:
  gatewayClassName: *name
  infrastructure:
    annotations:
      lbipam.cilium.io/ips: "${APP_IP_ENVOY_EXTERNAL:=127.0.0.1}"
      ipam.cilium.io/ip-pool: ingress
      ipam.cilium.io/require-pool-match: "true"
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: Same
    - &https
      name: external
      protocol: HTTPS
      # hostname: "*.${DNS_SHORT:=internal}"
      port: 443
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - kind: Secret
            name: short-domain-tls
          - kind: Secret
            name: long-domain-tls
    - <<: *https
      name: public
      hostname: "*.jjgadgets.tech"
      tls:
        certificateRefs:
          - kind: Secret
            name: jjgadgets-tech-tls
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.networking.k8s.io/gatewayclass_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy-external
  namespace: ingress
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: envoy
    namespace: ingress
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: envoy-external
  namespace: ingress
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: envoy-external
  compression:
    - type: Brotli
    - type: Gzip
    - type: Zstd
  connection:
    bufferLimit: 100Ki
  tcpKeepalive: {}
  timeout:
    http:
      requestTimeout: "10s"
  requestBuffer:
    limit: "100Ki"
  responseOverride:
    - match:
        statusCodes: [ {type: Value, value: 400}, {type: Value, value: 403}, {type: Value, value: 404}, {type: Value, value: 405}, {type: Value, value: 409}, {type: Value, value: 410}, {type: Value, value: 411}, {type: Value, value: 412}, {type: Value, value: 413}, {type: Value, value: 414}, {type: Value, value: 415}, {type: Value, value: 416}, {type: Value, value: 417}, {type: Value, value: 418}, {type: Value, value: 421}, {type: Value, value: 425}, {type: Value, value: 431}, {type: Value, valu [...]
      response:
        contentType: text/html
        body:
          type: ValueRef
          valueRef:
            group: ""
            kind: ConfigMap
            name: "custom-error-page"
